# serializer version: 1
# name: test_all_entities[sensor.nytgames_connections_played-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nytgames_connections_played',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Connections played',
    'platform': 'nyt_games',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'connections_played',
    'unique_id': '218886794-connections_played',
    'unit_of_measurement': 'games',
  })
# ---
# name: test_all_entities[sensor.nytgames_connections_played-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NYTGames Connections played',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'games',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nytgames_connections_played',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '9',
  })
# ---
# name: test_all_entities[sensor.nytgames_connections_won-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nytgames_connections_won',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Connections won',
    'platform': 'nyt_games',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'connections_won',
    'unique_id': '218886794-connections_won',
    'unit_of_measurement': 'games',
  })
# ---
# name: test_all_entities[sensor.nytgames_connections_won-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NYTGames Connections won',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'games',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nytgames_connections_won',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3',
  })
# ---
# name: test_all_entities[sensor.nytgames_current_connections_streak-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nytgames_current_connections_streak',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Current Connections streak',
    'platform': 'nyt_games',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'connections_streak',
    'unique_id': '218886794-connections_streak',
    'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
  })
# ---
# name: test_all_entities[sensor.nytgames_current_connections_streak-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'NYTGames Current Connections streak',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nytgames_current_connections_streak',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_all_entities[sensor.nytgames_current_wordle_streak-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nytgames_current_wordle_streak',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Current Wordle streak',
    'platform': 'nyt_games',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'wordles_streak',
    'unique_id': '218886794-wordles_streak',
    'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
  })
# ---
# name: test_all_entities[sensor.nytgames_current_wordle_streak-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'NYTGames Current Wordle streak',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nytgames_current_wordle_streak',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_all_entities[sensor.nytgames_highest_connections_streak-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nytgames_highest_connections_streak',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Highest Connections streak',
    'platform': 'nyt_games',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'connections_max_streak',
    'unique_id': '218886794-connections_max_streak',
    'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
  })
# ---
# name: test_all_entities[sensor.nytgames_highest_connections_streak-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'NYTGames Highest Connections streak',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nytgames_highest_connections_streak',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_all_entities[sensor.nytgames_highest_wordle_streak-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nytgames_highest_wordle_streak',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Highest Wordle streak',
    'platform': 'nyt_games',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'wordles_max_streak',
    'unique_id': '218886794-wordles_max_streak',
    'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
  })
# ---
# name: test_all_entities[sensor.nytgames_highest_wordle_streak-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'NYTGames Highest Wordle streak',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nytgames_highest_wordle_streak',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '5',
  })
# ---
# name: test_all_entities[sensor.nytgames_last_played_connections-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nytgames_last_played_connections',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.DATE: 'date'>,
    'original_icon': None,
    'original_name': 'Last played Connections',
    'platform': 'nyt_games',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'connections_last_played',
    'unique_id': '218886794-connections_last_played',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.nytgames_last_played_connections-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'date',
      'friendly_name': 'NYTGames Last played Connections',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nytgames_last_played_connections',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-09-23',
  })
# ---
# name: test_all_entities[sensor.nytgames_spelling_bees_total_pangrams_found-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nytgames_spelling_bees_total_pangrams_found',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Spelling Bees total pangrams found',
    'platform': 'nyt_games',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'spelling_bees_total_pangrams',
    'unique_id': '218886794-spelling_bees_total_pangrams',
    'unit_of_measurement': 'pangrams',
  })
# ---
# name: test_all_entities[sensor.nytgames_spelling_bees_total_pangrams_found-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NYTGames Spelling Bees total pangrams found',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'pangrams',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nytgames_spelling_bees_total_pangrams_found',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '15',
  })
# ---
# name: test_all_entities[sensor.nytgames_spelling_bees_total_words_found-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nytgames_spelling_bees_total_words_found',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Spelling Bees total words found',
    'platform': 'nyt_games',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'spelling_bees_total_words',
    'unique_id': '218886794-spelling_bees_total_words',
    'unit_of_measurement': 'words',
  })
# ---
# name: test_all_entities[sensor.nytgames_spelling_bees_total_words_found-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NYTGames Spelling Bees total words found',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'words',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nytgames_spelling_bees_total_words_found',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '362',
  })
# ---
# name: test_all_entities[sensor.nytgames_spolling_bees_played-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nytgames_spolling_bees_played',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Spolling Bees played',
    'platform': 'nyt_games',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'spelling_bees_played',
    'unique_id': '218886794-spelling_bees_played',
    'unit_of_measurement': 'games',
  })
# ---
# name: test_all_entities[sensor.nytgames_spolling_bees_played-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NYTGames Spolling Bees played',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'games',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nytgames_spolling_bees_played',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '87',
  })
# ---
# name: test_all_entities[sensor.nytgames_wordles_played-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nytgames_wordles_played',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Wordles played',
    'platform': 'nyt_games',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'wordles_played',
    'unique_id': '218886794-wordles_played',
    'unit_of_measurement': 'games',
  })
# ---
# name: test_all_entities[sensor.nytgames_wordles_played-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NYTGames Wordles played',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'games',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nytgames_wordles_played',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '33',
  })
# ---
# name: test_all_entities[sensor.nytgames_wordles_won-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nytgames_wordles_won',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Wordles won',
    'platform': 'nyt_games',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'wordles_won',
    'unique_id': '218886794-wordles_won',
    'unit_of_measurement': 'games',
  })
# ---
# name: test_all_entities[sensor.nytgames_wordles_won-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NYTGames Wordles won',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'games',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nytgames_wordles_won',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '26',
  })
# ---
